
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct comedi_subdevice {int dummy; } ;
struct comedi_insn {int n; } ;
struct comedi_device {int dummy; } ;


 unsigned int i_InputChannel ;
 unsigned int i_InterruptMask ;

int i_APCI1500_ReadInterruptMask(struct comedi_device *dev, struct comedi_subdevice *s,
 struct comedi_insn *insn, unsigned int *data)
{
 data[0] = i_InterruptMask;
 data[1] = i_InputChannel;
 i_InterruptMask = 0;
 return insn->n;
}
